--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.92.9",
     "axios": "^1.13.5",
     "lucide-vue-next": "^0.575.0",
     "pinia": "^3.0.4",
